*SVN*

* Cookie session store: raise ArgumentError when :session_key is blank.  [Jeremy Kemper]

* Deprecation: remove deprecated request, redirect, and dependency methods. Remove deprecated instance variables. Remove deprecated url_for(:symbol, *args) and redirect_to(:symbol, *args) in favor of named routes. Remove uses_component_template_root for toplevel components directory. Privatize deprecated render_partial and render_partial_collection view methods. Remove deprecated link_to_image, link_image_to, update_element_function, start_form_tag, and end_form_tag helper methods. Remove deprecated human_size helper alias.  [Jeremy Kemper]

* Consistent public/protected/private visibility for chained methods.  #7813 [Dan Manges]

* Prefer MIME constants to strings.  #7707 [Dan Kubb]

* Allow array and hash query parameters. Array route parameters are converted/to/a/path as before.  #6765, #7047, #7462 [bgipsy, Jeremy McAnally, Dan Kubb, brendan]

# Add a #dbman attr_reader for CGI::Session and make CGI::Session::CookieStore#generate_digest public so it's easy to generate digests
using the cookie store's secret. [Rick]

* Added Request#url that returns the complete URL used for the request [DHH]

* Extract dynamic scaffolding into a plugin.  #7700 [Josh Peek]

* Added user/password options for url_for to add http authentication in a URL [DHH]

* Fixed that FormTagHelper#text_area_tag should disregard :size option if it's not a string [Brendon Davidson]

* Set the original button value in an attribute of the button when using the :disable_with key with submit_tag, so that the original can be restored later. [Jamis Buck]

* session_enabled? works with session :off.  #6680 [Catfish]

* Added :port and :host handling to UrlRewriter (which unified url_for usage, regardless of whether it's called in view or controller) #7616 [alancfrancis]

* Allow send_file/send_data to use a registered mime type as the :type parameter #7620 [jonathan]
