@@ -95,6 +95,7 @@ module ActionController #:nodoc:
         response.headers.update(options[:add_headers]) if options[:add_headers]
         unless performed?
           render(options[:render]) if options[:render]
+          options[:redirect_to] = self.send(options[:redirect_to]) if options[:redirect_to].is_a? Symbol
           redirect_to(options[:redirect_to]) if options[:redirect_to]
         end
         return false
